syntax = "proto2";

package ccloudpubapi_v1;

import "compubapi_v1/Metadata.proto";

option java_package = "com.yoti.ccloudpubapi_v1";
option java_outer_classname = "RetrieveProto";

// Tag is a key/value pair used to identify data.
message Tag {
    optional string key = 1;
    optional string value = 2;
}

// Record is a single encrypted piece of content.
message Record {
    // RecordId is a unique identifier for this piece of data.
    optional bytes record_id = 1;

    // EncryptedContent is the actual data stored.
    optional bytes encrypted_content = 3;

    // EncryptionKeyId is the identifier for the encryption
    // key used to encrypt EncryptedContent.
    optional bytes encryption_key_id = 4;

    // Tags is a list of tags referencing this Record
    repeated Tag tags = 5;

    // Timestamp is a date string with milliseconds conforming to RFC3339
    // e.g.: 2016-11-09T14:30:54Z
    // This indicates the creation time of the record.
    optional string timestamp = 6;

    // Indicates whether this record has been binned.
    optional bool is_binned = 7;
}

// RetrieveRequest contains a request for data matching a
// given set of tags and falling within the given start and
// end date.
message RetrieveRequest {
    enum SearchType {
       AND_TAGS = 0;
       OR_TAGS = 1;
    }

    // RequesterPubKey is the public key used to encrypt the data.
    optional bytes requester_pub_key = 1;

    // DataGroup denotes the category of data being looked at.
    optional string data_group = 2;

    // QueryTags contains zero or more Tag objects which is used
    // to identify the data. If no tags are supplied, all tags will
    // be returned.
    repeated Tag query_tags = 3;

    // StartDate is the lower bounds of search query.
    optional string start_date = 4;

    // EndDate is the upper bounds of the search query.
    optional string end_date = 5;

    // SearchType indicates how the tags are used to look up a record.
    // AND_TAGS means that any record should include all the tags.
    // OR_TAGS means that a record should include any of the tags.
    optional SearchType search_type = 6;

    // RetrieveBin tells whether the retrieval request is for binned items or not.
    optional bool retrieve_bin = 7;

    // CloudId is a unique identifier for the cloud associated
    // with a yoti account.
    optional bytes cloud_id = 8;

    // DeviceMetadata (manufacture name, OS version, etc)
    optional compubapi_v1.Metadata device_metadata = 1600;

    // Feature activation flags (Flag1 | Flag2 | etc)
    // Enum flags are defined here: core-api/feature_flags.txt
    optional fixed64 feature_flags = 1601;

    // CorrelationId is generated by the client and used to correlate the
    // asynchronous response messages triggered by this request.
    optional string correlation_id = 1602;
}

// RetrieveResponse contains the response to a RetrieveRequest. It consists
// of 0 or more Records matching the request.
message RetrieveResponse {
    // Records is an array of 0 or more Records.
    repeated Record records = 1;

    // MoreRecords is set to true when the number of records to return exceeds
    // the limit.
    // This indicates the content of Records is not complete.
    optional bool more_records = 2;
}

